@@ -1,3 +1,9 @@
+globus-gssapi-gsi (13.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * Improve vhost support
+
+ -- Globus Toolkit <support@globus.org>  Wed, 01 Nov 2017 20:27:40 +0000
+
 globus-gssapi-gsi (13.3-1+gt6.@distro@) @distro@; urgency=low
 
   * Allow configuration of non-root user to own credentials for root services
